--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-      <title>Oliver Mensah | CV</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/fontawesome.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/brands.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/solid.min.css">
+
+      <title>I'm Oliver Mensah</title>
     </head>
   <body>
     <noscript>
