--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/fontawesome.min.css">
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/fontawesome.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/brands.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/solid.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/solid.min.css"> -->
 
       <title>I'm Oliver Mensah</title>
     </head>
